[package]
name = "nbody-tree"
version = "0.0.1"
edition = "2021"
authors = [
    "Scott Donnelly <scott@donnel.ly>",
    "Astrid Klipfel <astridklipfel@gmail.com>",
]
description = "Implementing n-body simulation based on hierarchical tree. Fork from kiddo."
readme = "README.md"
repository = "https://github.com/aklipf/nbody-tree"
autobenches = false
resolver = "2"

[profile.release]
debug = true
lto = true
codegen-units = 1

[profile.bench]
debug = true
lto = true
codegen-units = 1
opt-level = 3

[dependencies]
log = "0.4"
num-traits = "0.2"
az = "1"
doc-comment = "0.3"
elapsed = "0.1"
divrem = "1"
ordered-float = "4"
itertools = "0.12"
ubyte = "0.10"
init_with = "1"
sorted-vec = "0.8"

[dev-dependencies]
bincode = "1.3"
criterion = "0.5"
csv = "1"
flate2 = { version = "1", features = [
    "zlib-ng-compat",
], default-features = false }
log = "0.4"
memmap = "0.7"
proc-macro2 = { version = "1", features = ["default", "proc-macro"] }
radians = "0.3"
rayon = "1"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1.0"
codspeed-criterion-compat = "2"


[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
generator = "0.7"

[dependencies.rayon]
version = "1"
optional = true

[dependencies.rand]
version = "0.8"
optional = true

[dependencies.rand_chacha]
version = "0.3"
optional = true

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.tracing-subscriber]
version = "0.3"
optional = true

[dependencies.serde]
version = "1"
optional = true

[dependencies.serde_derive]
version = "1"
optional = true

[dependencies.serde_with]
version = "3"
optional = true

[dependencies.half]
version = "2.3"
optional = true
features = ["num-traits"]

[features]
default = ["tracing"]
test_utils = ["rand", "rand_chacha", "rayon"]
tracing = ["dep:tracing", "tracing-subscriber"]

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "add_points"
harness = false
required-features = ["test_utils"]

[[bench]]
name = "nearest_one"
harness = false
required-features = ["test_utils"]

[[bench]]
name = "nearest_n"
harness = false
required-features = ["test_utils"]

[[bench]]
name = "within"
harness = false
required-features = ["test_utils"]

[[bench]]
name = "within_unsorted"
harness = false
required-features = ["test_utils"]

[[bench]]
name = "best_n"
harness = false
required-features = ["test_utils"]

[[example]]
name = "cities"
path = "examples/cities.rs"

[[example]]
name = "check-select-nth-unstable"
path = "examples/check-select-nth-unstable.rs"
